kubernetes/apps/linkding/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: linkding
spec:
  selector:
    app: linkding
  ports:
    - protocol: TCP
      port: 9090
